--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -40,10 +40,10 @@
      <string>Фигуры</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="3" column="0">
-      <widget class="QPushButton" name="pushButton_2">
+     <item row="2" column="0">
+      <widget class="QPushButton" name="pushButton_6">
        <property name="text">
-        <string>Круг</string>
+        <string>Овал</string>
        </property>
       </widget>
      </item>
@@ -54,10 +54,10 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_3">
+     <item row="3" column="0">
+      <widget class="QPushButton" name="AddCircle">
        <property name="text">
-        <string>Прямоугольник</string>
+        <string>Круг</string>
        </property>
       </widget>
      </item>
@@ -68,17 +68,17 @@
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton">
+     <item row="1" column="0">
+      <widget class="QPushButton" name="pushButton_3">
        <property name="text">
-        <string>Квадрат</string>
+        <string>Прямоугольник</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton_6">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="AddSquare">
        <property name="text">
-        <string>Овал</string>
+        <string>Квадрат</string>
        </property>
       </widget>
      </item>
@@ -97,13 +97,6 @@
      <string>Функции</string>
     </property>
     <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="0">
-      <widget class="QPushButton" name="AddFigure">
-       <property name="text">
-        <string>Добавить</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="DeleteFigure">
        <property name="text">
