--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -41,7 +41,7 @@
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton_6">
+      <widget class="QPushButton" name="AddEllipse">
        <property name="text">
         <string>Овал</string>
        </property>
@@ -69,7 +69,7 @@
       </widget>
      </item>
      <item row="1" column="0">
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="AddRectangle">
        <property name="text">
         <string>Прямоугольник</string>
        </property>
