--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,16 +30,37 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>900</x>
-      <y>320</y>
+      <x>890</x>
+      <y>300</y>
       <width>158</width>
-      <height>351</height>
+      <height>401</height>
      </rect>
     </property>
     <property name="title">
      <string>Фигуры</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <item row="7" column="0">
+      <widget class="QPushButton" name="AddStar_5">
+       <property name="text">
+        <string>Звезда(5)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="0">
+      <widget class="QPushButton" name="AddStar_6">
+       <property name="text">
+        <string>Звезда(6)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QPushButton" name="AddHexagon">
+       <property name="text">
+        <string>Шестиугольник</string>
+       </property>
+      </widget>
+     </item>
      <item row="0" column="0">
       <widget class="QPushButton" name="AddSquare">
        <property name="text">
@@ -82,10 +103,10 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
-      <widget class="QPushButton" name="AddHexagon">
+     <item row="9" column="0">
+      <widget class="QPushButton" name="AddStar_8">
        <property name="text">
-        <string>Шестиугольник</string>
+        <string>Звезда(8)</string>
        </property>
       </widget>
      </item>
@@ -230,7 +251,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>210</y>
+      <y>200</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -243,7 +264,7 @@
     <property name="geometry">
      <rect>
       <x>980</x>
-      <y>210</y>
+      <y>200</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -256,7 +277,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>260</y>
+      <y>250</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -269,7 +290,7 @@
     <property name="geometry">
      <rect>
       <x>980</x>
-      <y>260</y>
+      <y>250</y>
       <width>71</width>
       <height>41</height>
      </rect>
